<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_margin="60dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="27dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:hint="@string/username"
        android:layout_margin="10dp"
        android:padding="20dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="97dp"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_margin="10dp"
        android:hint="@string/Password"
        android:padding="20dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="176dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@id/loginbutn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_margin="10dp"
        android:text="@string/LOGIN"
        android:backgroundTint="@color/teal_200"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="276dp" />

    <Button
        android:id="@id/createaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbutn"
        android:layout_margin="10dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/CREATE"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="558dp" />

    <Button
        android:id="@id/continueasguest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createaccount"
        android:layout_margin="10dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/CONTINUE"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="629dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

